--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "test": "npm test"
   },
   "author": "Paul Joy",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "axios": "^1.7.2"
+  }
 }
