--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "author": "Paul Joy",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.7.2"
+    "axios": "^1.7.2",
+    "csv-parser": "^3.0.0",
+    "dotenv": "^16.4.5",
+    "pg": "^8.12.0"
   },
   "devDependencies": {
     "jest": "^29.7.0"
