--- a/.env
+++ b/.env
@@ -4,3 +4,7 @@ PGPASSWORD = "Paul@1234"
 PGPORT = "5432"
 PGHOST = "localhost"
 PGDATABASE = "dvdrental"
+
+//Blob storage
+BLOB_STORAGE_CONNECTION_STRING = "UseDevelopmentStorage=true"
+BLOB_CONTAINER = "sequoia"
