--- a/.env
+++ b/.env
@@ -8,3 +8,4 @@ PGDATABASE = "dvdrental"
 //Blob storage
 BLOB_STORAGE_CONNECTION_STRING = "UseDevelopmentStorage=true"
 BLOB_CONTAINER = "sequoia"
+BLOB = "data"
