implementing blob storage trigger to download content from the blob that triggers the function and inserting the data into database

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ PGUSER = "postgres"
 PGPASSWORD = "Paul@1234"
 PGPORT = "5432"
 PGHOST = "localhost"
-PGDATABASE = "dvdrental"
+PGDATABASE = "azure_workflow"
 
 //Blob storage
 BLOB_STORAGE_CONNECTION_STRING = "UseDevelopmentStorage=true"
