implementing queue storage

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@azure/storage-blob": "^12.23.0",
+    "@azure/storage-queue": "^12.23.0",
     "axios": "^1.7.2",
     "azurite": "^3.31.0",
     "csv-parser": "^3.0.0",
