--- a/.env
+++ b/.env
@@ -6,6 +6,7 @@ PGHOST = "localhost"
 PGDATABASE = "azure_workflow"
 
 //Blob storage
-BLOB_STORAGE_CONNECTION_STRING = "UseDevelopmentStorage=true"
+CONNECTION_STRING = "UseDevelopmentStorage=true"
 BLOB_CONTAINER = "sequoia"
 BLOB = "data"
+QUEUE = "data"
