implementing storage queue trigger function

--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ PGPORT = "5432"
 PGHOST = "localhost"
 PGDATABASE = "azure_workflow"
 
-//Blob storage
+//AZURE
 CONNECTION_STRING = "UseDevelopmentStorage=true"
 BLOB_CONTAINER = "sequoia"
 BLOB = "data"
