--- a/functions/.env
+++ b/functions/.env
@@ -5,7 +5,8 @@ PGPORT = "5432"
 PGHOST = "localhost"
 PGDATABASE = "azure_workflow"
 
-//Blob storage
-BLOB_STORAGE_CONNECTION_STRING = "UseDevelopmentStorage=true"
+//Azure
+CONNECTION_STRING = "UseDevelopmentStorage=true"
 BLOB_CONTAINER = "sequoia"
 BLOB = "data"
+QUEUE = "data"
